--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,6 @@
 body {
     padding: 3em;
-    background-color: #fdf8d8;
-    font-family: Verdana, sans-serif;
+    background-color: #FFFFFF;
 }
 
 h1 {
